Update branches for LambdaDeployPipeline trigger

--- a/.github/workflows/LambdaDeployPipeline.yml
+++ b/.github/workflows/LambdaDeployPipeline.yml
@@ -2,7 +2,7 @@ name: Test & Deploy All JS Lambdas
 
 on:
   push:
-    branches: [ "main", "pipeline" ]
+    branches: [ "main" ]
   pull_request:
 
 permissions:
