--- a/.github/workflows/LambdaDeployPipeline.yml
+++ b/.github/workflows/LambdaDeployPipeline.yml
@@ -70,7 +70,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::380652644070:role/GithubPipeline
-          aws-region: eu-central-1
+          aws-region: eu-north-1
           audience: sts.amazonaws.com
 
       - name: Zip Lambda
