--- a/.github/workflows/LambdaDeployPipeline.yml
+++ b/.github/workflows/LambdaDeployPipeline.yml
@@ -3,6 +3,9 @@ name: Test & Deploy All JS Lambdas
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+    
 
 permissions:
   id-token: write
