--- a/JS_LambdaFunktionen/BestellService/package.json
+++ b/JS_LambdaFunktionen/BestellService/package.json
@@ -6,5 +6,8 @@
     "@aws-sdk/client-dynamodb": "^3.971.0",
     "@aws-sdk/client-ses": "^3.971.0",
     "@aws-sdk/lib-dynamodb": "^3.971.0"
+  },
+  "devDependencies": {
+    "aws-sdk-client-mock": "^4.1.0"
   }
 }
