change amplify.yml. Ref #226

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,11 @@ frontend:
   phases:
     preBuild:
       commands:
-        - echo "window._env_ = {" > HTML_Front/env.js
-        - echo "  COGNITO_CLIENT_ID: '$COGNITO_CLIENT_ID'," >> HTML_Front/env.js
-        - echo "  COGNITO_USER_POOL_ID: '$COGNITO_USER_POOL_ID'" >> HTML_Front/env.js
-        - echo " };" >> HTML_Front/env.js
+        - "echo \"window._env_ = {\" > HTML_Front/env.js"
+        - "echo \"  COGNITO_CLIENT_ID: '$COGNITO_CLIENT_ID',\" >> HTML_Front/env.js"
+        - "echo \"  COGNITO_USER_POOL_ID: '$COGNITO_USER_POOL_ID'\" >> HTML_Front/env.js"
+        - "echo \"};\" >> HTML_Front/env.js"
+
     build:
       commands:
         - echo "Build phase skipped (static site)"
